Solving Dependecies xml conflicts by multiple modules